--- a/LaTex_Esame_Manzolino.Tex
+++ b/LaTex_Esame_Manzolino.Tex
@@ -1,10 +1,10 @@
 \documentclass{beamer} % classe di documenti per poter creare le presentazioni che in questo linguaggio vengono definite come frame. 
 \usepackage{graphicx} % Package necessario per utilizzare immagini
 \usepackage{listings} % Pacchetto che può essere utilizzato per caricare degli algoritmi direttamente dagli script.
-\usetheme{CambridgeUS}
-\usecolortheme{sidebartab}
+\usetheme{Copenhagen}
+\usecolortheme{crane}
 
-\title{Variazioni delle superfici umide nell'oasi di Manzolino  }
+\title{Variazioni dei livelli idrici nell'oasi di Manzolino}
 
 \author{Andrea Rubini}
 \date{9 Agosto 2024}
@@ -27,7 +27,8 @@
             \begin{itemize}
             
                 \item
-                Il sito si estende in pianura tra le province di Modena e Bologna e comprende la cassa di espansione del Canale di S.Giovanni e i bacini di Tivoli. La cassa di espansione ricade in provincia di Modena ed è formata da tre bacini con acque poco profonde, estesi per una superficie complessiva circa 30 ettari e con ricca vegetazione palustre. Nelle adiacenze della cassa, vi sono rimboschimenti con specie autoctone e pioppeti artificiali. I bacini di Tivoli sono divisi in due gruppi (di 15 e 25 ha) dalla strada che da Tivoli va a Castelfranco Emilia. Sono stati creati negli anni ’60 e ’70 principalmente per l’itticoltura e una parte è in stato di abbandono. Nella parte modenese il sito ricade nell'Oasi di protezione della fauna di Manzolino. Nella parte bolognese alcuni bacini sono stati acquisiti dal Comune di S.Giovanni in Persiceto per la realizzazione di interventi di riqualificazione naturalistica.
+                E' un'area naturalistica riconosciuta all'interno della rete comunitaria Natura 2000 come Zona di Protezione Speciale per la tutela dell'ambiente e del patrimonio faunistico. E' compresa tra tre sub-siti compresi tra la Cassa di Espansione di Manzolino, nel Comune di Castelfranco Emilia, l'ex allevamento ittico di Tivoli (frazione del Comune di San Giovanni in Persiceto, in provincia di Bologna) e l'ex allevamento ittico di Boara Rossa (nella parte nord ovest dell'area). Dal 2005 un importante intervento di bonifica e ripristino ha creato un nuovo habitat naturale visitabile attraverso percorsi e punti di osservazione specifici.
+                In questo studio ci concentreremo sulla zona di Manzolino.
              
               
 
@@ -35,42 +36,97 @@
         \end{frame}
 
         \begin{frame}{Obiettivo del progetto}
-                Lo studio si pone come obbiettivo l'analisi delle variazioni dei livelli dell'acqua dal 2017 al 2024 tutte fotografie analizzate si riferiscono al mese di Luglio. Questo studio vuole analizzare se: come riferito nello stauto dell'ente che gestisce l'oasi avvenga una: gestione dei livelli idrici (nel rispetto della gestione idraulica e della tutela della fauna ittica), finalizzata a diversificare la struttura degli specchi d'acqua ed avere zone con diverse profondità.
+                Lo studio si pone come obbiettivo l'analisi delle variazioni dei livelli dell'acqua dal 2017 al 2024. Tutte le fotografie analizzate si riferiscono al mese di Luglio. Scopo di questo studio è analizzare se vi è una gestione dei livelli idrici finalizzata a diversificare la struttura degli specchi d'acqua ed avere zone con diverse profondità, come dichiarato dall'ente della Bonifica Burana che gestisce questo sito. 
                 
         \end{frame}
 
-        \begin{frame}{ la raccolta Dati}
-           Utilizzando il satellite Sentinel-2 L2A sono state raccolte 8 immagini registrate nel mese di luglio per ognuno di questi 8 anni di studio, tutte le immagini sono state raccolte tra il 17 e il 23 del mese, alla risoluzione spaziale massima possibile di 2m/px su asse X e su asse Y. sono state salvate in formato tiff. a 16 bit l'area selezionata è di 5.54Km2. Per ognuna di queste 8 foto sono state salvate le bande 02,03,04,08 e l'immagine in true color.
+        \begin{frame}{ La raccolta dati}
+           Utilizzando il satellite Sentinel-2 L2A sono state raccolte 8 immagini registrate nel mese di luglio per ognuno di questi 8 anni di studio, tutte le immagini sono state raccolte tra il 17 e il 23 del mese, alla risoluzione spaziale massima possibile di 4m2/px. sono state salvate in formato tiff. a 16 bit. L'area selezionata è di 5.54Km2. Per ognuna di queste 8 foto sono state salvate le bande 02,03,04,08 e l'immagine in True color.
            Queste bande corrispondono a R,G,B e il Nir = near infrared. 
         \end{frame}
-
-\section{Codice e Dati}
+        \begin{frame}{True Color}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\linewidth]{5d765140-1c93-430a-b590-ee66313f5383.png}
+    \caption{Immagine in true color del 2017}
+    \label{fig:enter-label}
+\end{figure}
+                \end{frame}\section{La raccolta dati}
 
         \begin{frame}{Codice}
-           Una volta scaricate le immagini, sono stati creati "pacchetti" di bande colore uniti per ogni anno di studio, e in seguito sostituito al rosso il Nir, cosa che ha reso più immediata la visione delle zone unide, in quanto il vicino infrarosso viene totalmente assorbito dagli specchi d'acqua.
-        \end{frame}
-       
+           Una volta scaricate le immagini, sono stati creati "pacchetti" di bande colore uniti per ogni anno di studio, e in seguito sostituito al verde il Nir, cosa che ha reso più immediata la visione delle zone umide, in quanto il vicino infrarosso viene totalmente assorbito dagli specchi d'acqua. in questo modo avremo immagini in false color
+          
+             2017
+           
+           B022017=rast("B04-2017.tiff")
+           
+           B032017=rast("B03-2017.tiff")
+           
+           B042017=rast("B02-2017.tiff")
+           
+           B082017=rast("B08-2017.tiff")
+           
+           U17=c(B022017,B032017,B042017,B082017)
         
+        \end{frame}
+        
+        \begin{frame}{Codice}
+            
+             par(mfrow=c(4,2))
+ 
+im.plotRGB(U17, 1,4,2)
+
+im.plotRGB(U18, 1,4,2)
+
+im.plotRGB(U19, 1,4,2)
+
+im.plotRGB(U20, 1,4,2)
+
+im.plotRGB(U21, 1,4,2)
+
+im.plotRGB(U22, 1,4,2)
+
+im.plotRGB(U23, 1,4,2)
+
+im.plotRGB(U24, 1,4,2)
+        \end{frame}
+      
+       \begin{frame}{Codice}
+                            \begin{figure}
+                            |
+                             \includegraphics[width=0.5\linewidth]{Rplot01.jpeg}
+                          \caption{False color}
+                           \label{fig:enter-label}
+                             \end{figure}
+
+
+
+        \end{frame}
+   
     \begin{frame}{NDWI}
            calcolo l'NDWI (Normalized Difference Water Index) seguendo la formula: 
-       NDWI=(B3-B8)/(B3+B8)   McFeeters (1996)
-      N.B.: B3 qui è la banda del verde così come impostata su sentinel. B8 è per il NIR. 
+       NDWI=(Green-Nir)/(Green+Nir)   McFeeters (1996)
+      N.B.: B2 qui è la banda del verde così come impostata su sentinel. B8 è per il NIR. 
      si sfruttano queste due bande per poter mettere in risalto l'acqua. 
-       
+    
+
+Esempio per il 2017.
+
+DifU17 = U17[[2]] - U17[[4]] differenza tra GREEN e NIR
+
+
+SumU17 = U17[[2]] + U17[[4]] somma tra GREEN e NIR
+
+ndwiU17 = DifU17 / SumU17
+
+
           \end{frame}
        
        
-        \begin{frame}{NDWI}
-\begin{figure}
-            \centering
-            \includegraphics[width=0.5\linewidth]{613b3336-11cc-4365-924a-2a9343664486.png}
-            \caption{Plot di visualizzazione NDWI per l'anno 2017}
-            \label{fig:enter-label}
-        \end{figure}
-                \end{frame}
+
  
  \begin{frame}{Classificazioni in base all'NDWI} 
-          Visualizzazione delle immagini elaborate attraverso l'indice NDWI, 
+        Visualizzazione delle immagini elaborate attraverso l'indice NDWI, 
 suddividendoli per gli 8 anni di riferimento
 La colorazione scelta è viridis cossichè la porzione di acqua verrà evidenziata in giallo, 
 il resto del territorio apparirà in una scala di blu. 
@@ -87,9 +143,33 @@ il resto del territorio apparirà in una scala di blu.
            \end{figure}
        \end{frame}
        \begin{frame}{Calcolo classi e creazione di un Dataframe}
-           suddividendo in 3 cluster i risulati ottenuti con il calcolo dell'NDWI per ogni anno preso in analisi e calcolando la percentuale di copertura per ogni cluster si è potuto creare un Database con 3 differenti percentuali: Vegetazione( veg),Terreno(soil),Acqua(water)
+           suddividendo in 3 cluster i risulati ottenuti con il calcolo dell'NDWI per ogni anno preso in analisi e calcolando la percentuale di copertura per ogni cluster si è potuto creare un Database con 3 differenti percentuali: Vegetazione(veg),Terreno(soil),Acqua(water)
+
+
+           Calcolo le percentuali di copertura per ogni classe per il 2017
+
+           U17c <- im.classify(ndwiU17, num.clusters=3)
+           
+           U17e <- ncell(U17c)
+           
+           F17e <- freq(U17c)
+           
+           prop17 = F17e / U17e
+           
+           perc17 = prop17 * 100
+           
+           perc17
+           
+           i17c <- im.classify(ndwiU17, num_clusters=3)
+           
        \end{frame}
+       
        \begin{frame}{Classificazione in base all'NDWI}
+
+par(mfrow=c(4,2))
+
+plot(ndwiU17, col=viridis (100))  2017 
+         
            \begin{figure}
                \centering
                \includegraphics[width=0.5\linewidth]{95dabb72-5ad3-4720-90a2-96edf7b2f055.png}
@@ -97,7 +177,38 @@ il resto del territorio apparirà in una scala di blu.
                \label{fig:enter-label}
            \end{figure}
        \end{frame}
+
 \section{Risultati}
+\begin{frame}{Grafico a Barre}
+anno = c(2017, 2018, 2019, 2020, 2021, 2022, 2023, 2024)
+
+water = c(8.982954, 8.509719, 8.274400, 8.549713, 10.115000, 6.738687, 9.243336, 6.668555)
+
+ 
+Calcolo delle variazioni percentuali anno su anno
+
+variazioni percentuali = c(NA, diff(water) / head(water, -1) * 100)
+ 
+Creazione del grafico a barre
+
+barplot(variazioni percentuali,
+
++         names.arg = anno, 
+
++         col = ""skyblue"", 
+
++         main = "Variazioni Percentuali del livello idrico per Anno", 
+
++         xlab = "Anno", 
+
++         ylab = "Variazione Percentuale (%)", 
+
++         ylim = c(min(variazioni_percentuali, na.rm = TRUE) - 5, 
+
++                  max(variazioni_percentuali, na.rm = TRUE) + 5))
+
+
+\end{frame}
         \begin{frame}{Variazioni percentuali del livello idrico per l'Anno }
             \begin{figure}
                 \centering
@@ -116,10 +227,11 @@ il resto del territorio apparirà in una scala di blu.
 \begin{frame}{Conclusioni}
     Utilizzando questo studio come base si potrebbe ricercare uno storico dei campionameni di specie nelle varie vasche a differenti livelli di profondità e studiare l'impatto che questi cambiamenti nei livelli idrici hanno sulle specie che abitano l'Oasi di Manzolino.
 \end{frame}
-\begin{frame}{Conclusioni}
+\begin{frame}{Grazie per l'attenzione}
+https://github.com/AndreaRubini
     \begin{figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{DSC_8319-Migliorato-NR copia.jpg}
+        \includegraphics[width=0.7\linewidth]{DSC_8319-Migliorato-NR copia.jpg}
         \caption{Platalea Leucorodia all'Oasi di Manzolino}
         \label{fig:enter-label}
     \end{figure}
